# javelin-linux

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
contrib/: javelin-info.sh
docs/: comparative-analysis.md  ea-javelin-error-codes.md  research-notes.md  security-audit-report.md
flatpak/: README.md  com.ea.javelin-compat.yml
proto/: attestation.proto
scripts/: analyze-eac-client.sh  demo.sh  generate_vmlinux.sh  setup_ebpf.sh  steam-launch-wrapper.sh  trace-javelin-syscalls.sh
src/: javelin-status.c
src/ebpf/: javelin_monitor.bpf.c  loader.c
src/javelin/: javelin.c  javelin.h
src/platform/linux/: arch.h  attestation.c  attestation.h  seccomp_shim.c
systemd/: javelin-loader.service
tests/integration/: test_cross_process.c  test_full_pipeline.sh
tests/perf/: memscan_benchmark.c
tests/unit/: test_javelin.c  test_seccomp.c
